# yts-render

./: .env.example  .gitignore  AGENTS.md  CONTEXT.md  README.md  package-lock.json  pyproject.toml
app/: __init__.py  automation.py  config.py  db.py  hub_context.py  main.py  manual_script.py  models.py  music_bank.py  operational_settings.py  orchestrator.py  providers.py  publication_ops.py  schemas.py  storage.py  tiktok_api.py  trends.py  utils.py  youtube_api.py
app/audio/: music_mix.py  sound_design.py
app/compliance/: review.py
app/editorial/: repetition.py  research_brief.py  retention.py  topic_mode.py  visual_contract.py
app/pipelines/: asset_pipeline.py  base.py  common.py  image_assets.py  monetization_pipeline.py  music_assets.py  render_pipeline.py  scene_pipeline.py  script_audit.py  script_fact_pack.py  script_metrics.py  script_pipeline.py  script_repair.py  subtitle_assets.py  timeline.py  topic_pipeline.py  tts_assets.py
app/providers/: __init__.py  errors.py  image.py  llm.py  music.py  registry.py  tts.py
docs/: app.md  index.html  modularization-plan.md  runbook-inicializacao.md  sprint-1-pipeline-audit.md  sprints-4-14-task-list.md  tiktok-callback.html  tiktok-privacy.html  tiktok-terms.html  tiktokQZ82W1qR5IDvPKFFY9y6ib3DDh84DuoC.txt
scripts/: install_systemd_service.sh  migrate_sqlite_to_postgres.py  smoke_real_providers.py
tests/: conftest.py  e2e_support.py  test_deep_modules_unit.py  test_e2e.py  test_hub_publication.py  test_orchestrator_flow.py  test_pipeline_assets.py  test_pipeline_script.py  test_providers_integrations.py
(+20 files in other folders)
